Fix Sequential Iterator assert on invalid rectangles

Summary:
Before Quick Brush engine (roundmarker) was crashing
because Sequential Iterator throwed out asserts
when the rectangle was not "empty" according to Qt
but  still not valid (for example has intmin value on
width or height). This commit fixes that behaviour by
providing additional checks.
Commit includes also benchmarks for roundmarker.

BUG:404179

Test Plan:
- benchmarks included in the commit
- painting with Quick Brush (i.e. b) Basic-1)
with size <1 px

Reviewers: dkazakov, #krita

Reviewed By: dkazakov, #krita

Subscribers: rempt

Tags: #krita

Differential Revision: https://phabricator.kde.org/D19881